--- a/cs.html
+++ b/cs.html
@@ -38,7 +38,7 @@
       
     </head>
     <body>
-        <div style="width: 100%;height: 50px; background-color:navy">
+        <div style="width: 100%;height: 50px; background-color:gray">
             <a href = "index.html"> 
             <div style="height: 100%; width: 50px; float: left;font-size: 30px; margin-left: 15px">
                 <center><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></center>
@@ -82,15 +82,13 @@
                     <p>1.Ethics and Civic Engagement</br>2.Communication</br>3.Leadership and Teamwork</br>4.Professionalism</br>5.Curiosity and Skil</p>
 
           <footer class="footer">
-                <div style="background-color:navy">
+                <div style="background-color:gray">
                 <center>
                 <div class="container">
                 <span class="text-muted"> <p>©Ashesi University College. All rights reserved.</p>
                     <p>1 University Avenue, Berekuso; PMB CT 3, Cantonments, Accra, Ghana </p>
                     <p>Phone: +233.302.610.330  | Email: info@ashesi.edu.gh</p>
-
                     <p>Ashesi University Foundation| Ghana Climate Innovation Center</p>
-
                     <p>Site Policies</p>
                     <p>Site Map<p></span>
                 </div>
