--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <title>Home</title>
-        <!-- Bootstrap core CSS -->
+         <!-- Bootstrap core CSS -->
         <!-- Latest compiled and minified CSS -->
         <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
         <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no;" />    
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no;" />
+
+        <link rel="stylesheet"  href="css/jquery.mobile.structure.css" />
+        <link rel="stylesheet" href="css/jquery.mobile.theme.css" />
+  
+
+        <!-- Custom styles for this template -->
+        <link href="css/simple-sidebar.css" rel="stylesheet">
+      <script src="js/lib/jquery.mobile.js"></script>  
       
     </head>
     <body>
